# APAP-ai

./: .dockerignore  .env  .gitignore  04.Seaborn.ipynb  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  unit-test.yml
app/: api_response.py  config.py  connection_manager.py  detection.py  history.py  main.py  setting.py
model/: detect.py  fin.py  llm_api.py  localLLM_demo.py  operations.py  schema.py  tracking.py  video_recorder.py  yolov8(detecton_deepsort_pose_estimation).py
src/: detect.py  tracking.py
tests/: conftest.py  test_area_intrusion.py  test_calculate_distance.py  test_detect_image.py  test_estimate_distance.py  test_realtime_detect.py  test_save_history.py
