[tool.poetry]
name = "apap"
version = "0.1.0"
description = ""
authors = ["sukkyun <goobghd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
scipy = "^1.13.1"
torch = "^2.3.0"
pillow = "^10.3.0"
opencv-python = "^4.9.0.80"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
